--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,8 +3,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Beatnik Mockup :: BMW</title>
-	<link rel="stylesheet" href="/app.css">
-	<script src="/app.js"></script>
+	<link rel="stylesheet" href="app.css">
+	<script src="app.js"></script>
 	<script>require('initialize');</script>
 	<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Dosis:300|Permanent+Marker|Playfair+Display|Rock+Salt" rel="stylesheet">
 </head>
@@ -12,9 +12,9 @@
 	<div class="container">
 		<div id="header">
 			<div id="header-container">
-				<img src="/images/dmlogo.png" alt="Daily Maverick" id="dmlogo">
-				<img src="/images/bmw.png" alt="Paid for and driven by BMW" id="sponsorlogo">
-				<img src="/images/beatnik.png" alt="Beatnik" id="beatniklogo">
+				<img src="images/dmlogo.png" alt="Daily Maverick" id="dmlogo">
+				<img src="images/bmw.png" alt="Paid for and driven by BMW" id="sponsorlogo">
+				<img src="images/beatnik.png" alt="Beatnik" id="beatniklogo">
 			</div>
 		</div>
 		<div id="social">
@@ -24,7 +24,7 @@
 			<a href="#"><i class="fa fa-mail"></i></a>
 		</div>
 		<div id="topimg" class="parallax">
-			<!-- <img src="/images/top.jpg" alt="Two dudes"> -->
+			<!-- <img src="images/top.jpg" alt="Two dudes"> -->
 		</div>
 		<h1 class="headline">Rebel with a pencil</h1>
 		<div class="body-text">
@@ -34,7 +34,7 @@
 			<p>Meadows also found support for her interests beyond the classical singing and opera that brought her to The New School. In a recent turning point - aided by her voice instructor - she let her passion for musical theatre shine through.</p>
 		</div>
 		<div class="full-width">
-			<img src="/images/hand.jpg" alt="" id="hand">
+			<img src="images/hand.jpg" alt="" id="hand">
 		</div>
 		<div class="body-text">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laudantium quam ipsam voluptas soluta error velit temporibus quos quod. Autem dolore nulla cum tempore voluptatum ipsum, porro corporis architecto accusantium?</p>
@@ -45,16 +45,16 @@
 				Hic ipsum iste dignissimos, dolore illo magni quidem mollitia cupiditate sint soluta. Quia blanditiis expedita iste libero laudantium, beatae esse odio rerum vitae quam. Est, iure obcaecati recusandae nam saepe.
 			</p>
 			<p>Assumenda itaque molestias eum unde voluptates, sequi atque fugiat numquam nihil nostrum, quia officia inventore perspiciatis at reiciendis provident rerum odio nemo iure soluta? Fugiat harum saepe cumque. Veritatis, commodi!</p>
-			<img src="/images/cartoonist.jpg" alt="A self-portrait of the artist">
+			<img src="images/cartoonist.jpg" alt="A self-portrait of the artist">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit veniam, numquam praesentium unde, aliquid quam est labore, id nisi veritatis placeat nesciunt ut repellat ad odio, maxime! Molestiae, dolore, fugiat!</p>
 			<p>Quidem obcaecati cumque impedit eligendi voluptas dolorem eaque, quod, eos libero magni mollitia. Quod deserunt esse culpa praesentium, inventore quis aut, doloribus ad harum nobis temporibus, optio nemo minima voluptatem.</p>
 			<p>Architecto asperiores, dolorum natus inventore possimus numquam expedita non tenetur blanditiis quisquam alias ex nulla, voluptates assumenda aperiam id, incidunt culpa suscipit nihil molestiae ducimus aut. Voluptate, ea fuga illum.</p>
 		</div>
 		<div class="full-width">
-			<video id="video" src="/videos/fire.mp4" controls="true" poster="/images/video.jpg"></video>
+			<video id="video" src="/videos/fire.mp4" controls="true" poster="images/video.jpg"></video>
 		</div>
 		<div class="body-text">
-			<img src="/images/minefield1.jpg" alt="Religious minefield">
+			<img src="images/minefield1.jpg" alt="Religious minefield">
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laudantium quam ipsam voluptas soluta error velit temporibus quos quod. Autem dolore nulla cum tempore voluptatum ipsum, porro corporis architecto accusantium?</p>
 			<div class="pull-quote pull-quote-left">
 				"Expedita accusamus repudiandae dolor nesciunt"
@@ -65,10 +65,10 @@
 			<p>Assumenda itaque molestias eum unde voluptates, sequi atque fugiat numquam nihil nostrum, quia officia inventore perspiciatis at reiciendis provident rerum odio nemo iure soluta? Fugiat harum saepe cumque. Veritatis, commodi!</p>
 		</div>
 		<div id="bottomimg" class="parallax full-width">
-			<!-- <img src="/images/defoe.jpg" alt="" id="Big Face"> -->
+			<!-- <img src="images/defoe.jpg" alt="" id="Big Face"> -->
 		</div>
 		<div class="full-width">
-			<img src="/images/advert.jpg" alt="" id="Rebel against the satus quo">
+			<img src="images/advert.jpg" alt="" id="Rebel against the satus quo">
 		</div>
 	</div>
 	<footer>
