--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -7,6 +7,8 @@
 	<script src="app.js"></script>
 	<script>require('initialize');</script>
 	<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Dosis:300|Permanent+Marker|Playfair+Display|Rock+Salt" rel="stylesheet">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 </head>
 <body>
 	<div class="container">
